# AIH2

./: .gitattributes  .gitignore  .zenodo.json  LICENSE  README.md  conftest.py  pyproject.toml
.claude/project-memory/: registry.yaml
.github/workflows/: latex.yml
data/: README_dataset.md
data/curated/: aih2_v1.csv  fixture_v0.csv
data/wp1/: AIH2_WP1_extraction_sheet.xlsx  AIH2_WP1_non_open_access.bib  AIH2_WP1_source_pool.md  AIH2_WP1_source_pool.xlsx  ARCHIVE_CURATION.md  CLI_APPLY_CRITIC_FIXES_AND_RERUN.md  CLI_APPLY_IJHE_FIXES.md  CLI_APPLY_REVIEW_FIXES.md  CLI_ASSEMBLE_UPLOAD_PACKAGE.md  CLI_BUILD_EM_UPLOAD_SET.md  CLI_EXECUTE_REMEDIATION_CLEANUP.md  CLI_EXECUTE_REMEDIATION_ENERGY_AND_AI.md  CLI_FILL_AUTHOR.md  CLI_INGEST_COMMAND.md  CLI_INSERT_DOI_REMOVE_GITHUB.md  CLI_PLAN_REMEDIATION_CLEANUP_CONSOLIDATION.md  CLI_REVIEW_QUESTION_PACK_AND_PLAN.md  STILL_MISSING.md  (+32 more)
paper/: CHANGELOG_CRITIC_FIXES.md  CHANGELOG_REVIEW_FIXES.md  CITATION_COVERAGE.md  COMPLETENESS_AUDIT.md  DIAGNOSIS.md  FINAL_VERIFICATION.md  FINAL_VERIFICATION_v2.md  REMEDIATION_CLEANUP_PLAN.md  REMEDIATION_PLAN.md  REVIEW_RESPONSE_PLAN.md  SELF_REVIEW.md  SUBMISSION_PLAN.md  main.tex  references.bib
plan/: 2026-06-14-aih2-concept-foundation.md  2026-06-14-aih2-design-spec.md  2026-06-14-aih2-phase1-implementation-plan.md  analysis-protocol.md
release/: ZENODO_PREVIEW.md
submission_package/: MANIFEST.md  README.md
tools/: add_bibtex.py  citation_coverage.py  compliance_gate.py  consistency_gate.py  fetch_bibtex.py  lint_paper.py  render_figure.py  validate_rows.py
vault/: 00-Hub.md
(+186 files in other folders)
